--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -33,14 +33,18 @@
     </form>
 
     {% if not init %}
+    <p> Keyword Pencarian: <i>{{ keyword }}</i></p>
     <main>
         {% if nResult != 0 %}
-        <p> Hasil : {{ nResult }} | Waktu Pencarian : {{ elapsedTime }}</p>
-        {% for file in result %}
+        <p> Hasil : <i>{{ nResult }}</i> | Waktu Pencarian : <i>{{ elapsedTime }} ms</i></p>
+        {% for file in result %} {% for entry in file.getResultEntry() %}
         <div>
-
+            <p> Jumlah: {{ entry.getJumlah() }} | Tanggal: {{ entry.getTanggal() }} </p>
+            <p> Text : {{ entry.getText() }} </p>
+            <p> <b> {{ file.getFilename() }} </b></p>
+            <br>
         </div>
-        {% endfor %} {% else %}
+        {% endfor %} {% endfor %} {% else %}
         <p> Tidak ada hasil ditemukan </p>
         {% endif %}
     </main>
