--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -36,17 +36,18 @@
     <p> Keyword Pencarian: <i>{{ keyword }}</i></p>
     <main>
         {% if nResult != 0 %}
-        <p> Hasil : <i>{{ nResult }}</i> | Waktu Pencarian : <i>{{ elapsedTime }} ms</i></p>
-        {% for file in result %} {% for entry in file.getResultEntry() %}
-        <div>
-            <p> Jumlah: {{ entry.getJumlah() }} | Tanggal: {{ entry.getTanggal() }} </p>
-            <p> Text : {{ entry.getText() }} </p>
-            <p> <b> {{ file.getFilename() }} </b></p>
-            <br>
-        </div>
-        {% endfor %} {% endfor %} {% else %}
-        <p> Tidak ada hasil ditemukan </p>
-        {% endif %}
+        <p> Hasil : <i>{{ nResult }}</i> | Waktu Pencarian : <i>{{ elapsedTime }} ms</i></pp>
+            {% for file in result %} {% for entry in file.getResultEntry() %}
+            <div>
+                <p>===========================================================================</p>
+                <p> Jumlah: {{ entry.getJumlah() }} | Tanggal: {{ entry.getTanggal() }} </p>
+                <p> Text : {{ entry.getText() }} </p>
+                <p> Nama File: <b> {{ file.getFilename() }} </b></p>
+                <br>
+            </div>
+            {% endfor %} {% endfor %} {% else %}
+            <p> Tidak ada hasil ditemukan </p>
+            {% endif %}
     </main>
     {% endif %}
 
